2005-12-27  Benoît Dejean  <benoit@placenet.org>

	* src/Makefile.am:
	* src/e_date.c: (e_strftime), (e_strftime_fix_am_pm),
	(e_utf8_strftime_fix_am_pm), (filter_date),
	(procman_format_date_for_display):
	* src/e_date.h:
	* src/procman.h:
	* src/proctable.c: (sort_ints), (proctable_new),
	(update_info_mutable_cols), (procinfo_new):
	* src/proctable.h:

	Added "Started" column to display start time of each process.

2005-12-27  Benoît Dejean  <benoit@placenet.org>

	* src/gnome-system-monitor.schemas.in:

	Fixed typo.

2005-12-24  Benoît Dejean  <benoit@placenet.org>

	* src/load-graph.c: (load_graph_new):

	Start the graphs on startup so that they can acquire data even
	if not shown.

	Closes #324719.

2005-12-19  Benoît Dejean  <benoit@placenet.org>

	* src/bacon-message-connection.c: (is_owned_by_user_and_socket),
	(find_file_with_pattern), (socket_filename):
	
	Synced.

2005-12-14  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	
	Post-release version bump to 2.13.4.
	
	* src/load-graph.c: (get_load):
	* src/procman.h:
	
	Don't counts IOWAIT time as busy in the CPU graphs.
	Closes #324043.

2005-12-13  Benoît Dejean  <benoit@placenet.org>

	* NEWS:

	Released 2.13.3.

2005-12-12  James Henstridge  <james@jamesh.id.au>

	* src/Makefile.am: disable gconf schema install if $DESTDIR is
	set.

	* Makefile.am: ignore scrollkeeper database in the
	distuninstallcheck.  Remove intltool programs on distclean.

	* configure.in: modernise a bit, and add AC_DEFINE() descriptions
	so that things work without acconfig.h.

	* acconfig.h: remove obsolete file.

	* autogen.sh: require Automake 1.9.

2005-12-06  Benoît Dejean  <benoit@placenet.org>

	* src/bacon-message-connection.c:

	Synced with libbacon.

2005-12-06  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/procman.c: (procman_data_new):
	* src/procman.h:
	* src/proctable.c: (proctable_free_info), (procinfo_new):

	Let's have fun with g_slice_*.

2005-12-01  Benoît Dejean  <benoit@placenet.org>
