@@ -1,5 +1,14 @@
 2005-12-27  Benoît Dejean  <benoit@placenet.org>
 
+	* src/procdialogs.c: (smooth_refresh_toggled),
+	(procdialog_create_preferences_dialog):
+	* src/smooth_refresh.c: (smooth_refresh_get):
+	* src/smooth_refresh.h:
+
+	Added smooth_refresh option to please Linus.
+
+2005-12-27  Benoît Dejean  <benoit@placenet.org>
+
 	* src/Makefile.am:
 	* src/e_date.c: (e_strftime), (e_strftime_fix_am_pm),
 	(e_utf8_strftime_fix_am_pm), (filter_date),
